--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -10,8 +10,8 @@ qos_hex = { path = "../qos_hex", features = ["serde"] }
 qos_p256 = { path = "../qos_p256" }
 qos_nsm = { path = "../qos_nsm", default-features = false }
 
-nix = { version = "0.26", features = ["socket"], default-features = false }
-libc = "=0.2.148"
+nix = { version = "0.29.0", features = ["socket"], default-features = false }
+libc = "0.2.155"
 borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
 
 # For AWS Nitro
